<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdd"
        android:icon="@android:drawable/ic_menu_add"
        android:onClick="AddMenu"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemAbout"
        android:onClick="aboutMenu"
        android:title="@string/about" />
    <group
        android:id="@+id/grupoTema"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemDark"
            android:title="@string/dark_theme" />
        <item
            android:id="@+id/menuItemClaro"
            android:title="@string/clear_theme" />
    </group>
</menu>